<resources>
    <string name="app_name">OpenWatch</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">OpenWatch</string>
    <string name="fb_app_id">297496017037529</string>
    <string name="by">By</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="karma">Karma</string>
    <string name="report">Report</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_no">No Thanks</string>
    <string name="dialog_bummer">Bummer</string>
    <string name="whoops">Whoops!</string>
    <string name="video_button_text">Broadcast Video</string>
    <string name="photo_button_text">Take Photo</string>
    <string name="top_stories_button_text">Top Stories</string>
    <string name="saved_media_button_text">Your Media</string>
    <string name="local_button_text">Local Feed</string>
    <string name="feedback_button_text">Send Feedback</string>
    <string name="settings_button_text">Settings</string>
    <string name="syncing_existing_media">Syncing existing media...\nSync will continue in the background</string>
    <string name="mission_button_text">Missions</string>
        <string name="share_email_subject">OpenWatch-Android feedback</string>
        <string name="share_email_text">Hey OpenWatch!\n\n</string>
        <string name="share_chooser_title">Send us feedback</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="login_dialog_signup">Sign up!</string>
    <string name="logout">Sign out</string>
    <string name="reporter"></string>
    <string name="sign_in">Sign In!</string>
    <string name="take_choose_picture_title">Set your avatar</string>
    <string name="take_picture">Use camera</string>
    <string name="choose_picture">Browse gallery</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="message_account_stored">You are currently signed in. For security, your password is not stored on this device. Log out to use a different account.</string>
    <string name="message_account_expired">Whoops, your account session has expired. Please login again.</string>
    <string name="fancy_login_welcome_text">Welcome to OpenWatch. Enter your email to get started.</string>
    <string name="login_button_text">Login</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="create_account_prompt">Before we get started take a moment to create an OpenWatch account. It only takes a second, and allows you to start broadcasting immediately.</string>
    <string name="login_dialog_denied_title">Login Denied</string>
    <string name="login_dialog_denied_msg">Please check your username and password. If you do not have an account, please sign up.</string>
    <string name="login_dialog_unknown_email_title">Create New Account?</string>
    <string name="login_dialog_unknown_email_msg">The email address you provided is not connected to an OpenWatch account. Would you like to register a new account with the following account: </string>
    <string name="question_mark">\?</string>
    <string name="login_dialog_failed_title">Login Failed</string>
    <string name="login_dialog_failed_msg">The OpenWatch service could not be reached. Please check your network connection and try again.</string>
    <string name="signup_dialog_email_taken_title">Email Already Registered</string>
    <string name="signup_dialog_email_taken_msg">This email is already registered with OpenWatch: </string>
    <string name="signup_dialog_failed_title">Signup Failed</string>
    <string name="signup_dialog_failed_msg">There was a probleem signing up. Please try again later.</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="directory">Directory</string>
    <string name="broadcast">Broadcast</string>
    <string name="record">Record</string>
    <string name="tab_local_user_recordings">Your Media</string>
    <string name="tab_local">Local</string>
    <string name="tab_following">Following</string>
    <string name="tab_featured">Featured</string>
    <string name="tab_featured_media">Top Videos</string>
    <string name="tab_missions">Missions</string>
    <string name="tab_Raw">Raw</string>
    <string name="loading_recordings">Loading recordings</string>
    <string name="no_recordings">You have no recordings</string>
    <string name="loading_feed">Loading feed</string>
    <string name="feed_empty">No feed entries</string>
    <string name="title_activity_local_recording_view">LocalRecordingViewActivity</string>
    <string name="login_for_local_recordings">You must be logged in to view your recordings</string>
    <string name="on_device">ON DEVICE</string>
    <string name="tab_map">Map</string>
    <string name="tab_info">Info</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="remove_tag_dialog_title">Remove Tag?</string>
    <string name="remove_tag_dialog_msg">Would you like to remove this tag from this recording?</string>
    <string name="remove_tag_dialog_yes">Remove Tag</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_tag">Tag</string>
    <string name="what_happened">What Happened?</string>
    <string name="title_activity_what_happened">WhatHappenedActivity</string>
    <string name="submit">Submit</string>
    <string name="share_dialog_title">Share</string>
    <string name="share_dialog_no">No Thanks</string>
    <string name="title_activity_action_bar_feed">ActionBarFeedActivity</string>
    <string name="sync_video_complete_header_text">Your Video is Live!</string>
    <string name="sync_video_header_text">Syncing video with openwatch.net</string>
    <string name="title_activity_recorder">RecorderActivity</string>
    <string name="stop_recording_dialog_title">Stop Recording?</string>
    <string name="stop_recording_dialog_message">Are you sure you want to stop recording?</string>
    <string name="stop_recording_dialog_stop">Stop</string>
    <string name="stop_recording_dialog_continue">Continue</string>
    <string name="recording">Recording</string>
    <string name="camera_error_dialog_title">Could not Access Camera</string>
    <string name="camera_error_dialog_message">If your device does have a camera, we can\'t find it. Please send
        feedback with your device model
    </string>
    <string name="share_investigation">Share Investigation</string>
    <string name="share_story">Share Story</string>
    <string name="title_activity_story_view">StoryViewActivity</string>
    <string name="title_activity_web_browser">WebBrowserActivity</string>
    <string name="title_activity_welcome">Welcome, New Watcher!</string>
    <string name="title_activity_picture_review">PictureReviewActivity</string>
    <string name="title_activity_picture_review_ab_title">Describe Your Picture</string>
    <string name="sync_photo_complete_header_text">Your Photo is Live!</string>
    <string name="sync_photo_header_text">Syncing photo with openwatch.net</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_owinvestigation_view">OWInvestigationViewActivity</string>
    <string name="continue_button_text">Continue</string>
    <string name="media_description_hint">What Happened? #tags</string>
    <string name="share_media_dialog_title">Share This Media!</string>
    <string name="cannot_play_video">Your Device Cannot Play This Video</string>
    <string name="video_error_intro">Unfortunately, your device doesn\'t have native support for this video format.</string>
    <string name="device_has_external_video_player">However, we\'ve detected your device has an external application installed that may be able to play this video.</string>
    <string name="device_lacks_external_video_player">However, there\'s a slim chance an external media player can play this video on your device. Don\'t get your hopes up.</string>
    <string name="play_video_externally">Play with external app</string>
    <string name="search_for_video_player">Search for external app</string>
    <string name="video_player_search_query">h264+media+player</string>
    <string name="share">Share!</string>
    <string name="share_dialog_generic_title">Your media is live! Spread the word and make an impact!</string>
    <string name="share_dialog_photo_title">Your photo is live! Spread the word and make an impact!</string>
    <string name="share_dialog_photo_button">Share photo</string>
    <string name="share_dialog_video_message">Your video is live! Spread the word and make an impact!</string>
    <string name="share_video">Share video</string>
    <string name="via_openwatch">via @OpenWatch</string>
    <string name="loading_next_page">Loading...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_account">OpenWatch.net</string>
    <string name="pref_title_account">Account</string>
    <string name="pref_description_account">Your OpenWatch.net credentials</string>
    <string name="drawer_open"/>
    <string name="drawer_close"/>
    <string name="mission_header"><b>Missions</b> are a way for you to get actively involved in stories that matter to you.
    </string>
    <string name="tap_to_dismiss">Touch to dismiss</string>
    <string name="login_failed_dialog_title">We couldn\'t successfully authenticate your account with Facebook. Sorry!
    </string>
    <string name="public_on_ow">Post to OpenWatch</string>
    <string name="post_to_fb">Post to Facebook</string>
    <string name="post_to_twitter">Post to Twitter</string>
    <string name="post_to">Post to</string>
    <string name="done">Done!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="fb_error">We weren\'t able to contact FB. Please try again later. I wish there was more we could
        say...
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="misc">Misc</string>
    <string name="share_this_app">Share this app!</string>
    <string name="ow_on_github">OpenWatch on Github</string>
    <string name="visit_ow">Visit OpenWatch.net</string>
    <string name="ow_credentials">OpenWatch.net Credentials</string>
    <string name="ow.net">OpenWatch.net</string>
    <string name="handle_truth">You can handle the truth! Get @OpenWatch for Android or iOS! \n\nAndroid: %1$s \n\niOS: %2$s</string>
    <string name="touch_to_broadcast">Touch anywhere to begin broadcasting</string>
    <string name="cant_get_image">Whoops, we can\'t get that image</string>
    <string name="cant_get_image_message">The image you selected is stored with a 3rd party service, and we aren\'t able to retrieve it at this time. We\'ll work to
        support this in the future.</string>
    <string name="select_mission">Attach to Mission</string>
    <string name="you_joined_mission">You joined a Mission!</string>
    <string name="mission_videos_will_be_tagged">Videos you record will be automatically tagged until you decide otherwise.</string>
    <string name="mission_receive_push_alert">You will receive push alerts as this story develops.</string>
</resources>