<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/you_joined_mission"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"/>

    <ImageView
            android:id="@+id/hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:src="@drawable/hash"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mission_videos_will_be_tagged"
            android:id="@+id/body"
            android:layout_toRightOf="@id/hash"
            android:layout_alignTop="@id/hash"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"/>

    <ImageView
            android:id="@+id/alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alert"
            android:layout_alignTop="@+id/body2"
            android:layout_toLeftOf="@+id/body"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mission_receive_push_alert"
            android:id="@+id/body2"
            android:layout_below="@+id/body"
            android:layout_toRightOf="@id/alert"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>