<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".WhatHappenedActivity" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/sync_progress_container"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    android:background="#c5eaf8">

        <TextView
                android:id="@+id/sync_progress_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/button_login_progress"
                android:text="@string/sync_video_header_text"/>

        <ProgressBar
                android:id="@+id/sync_progress"
                android:layout_toLeftOf="@id/sync_progress_text"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:indeterminateBehavior="cycle"
                android:visibility="visible"
                />

        <ImageView
                android:id="@+id/sync_complete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/earth"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/sync_progress"
                android:visibility="gone"
                />

    </RelativeLayout>

    <VideoView
            android:id="@+id/videoview"
            android:layout_below="@id/sync_progress_container"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="144dp"
            android:layout_height="96dp"
            android:layout_gravity="center" />


    <FrameLayout
            android:id="@+id/infoFragmentLayout"
            android:layout_toLeftOf="@id/videoview"
            android:layout_alignBottom="@id/videoview"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="-4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <fragment
                android:id="@+id/media_object_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="org.ale.openwatch.OWMediaObjectInfoFragment"
                tools:layout="@layout/user_media_object_info_view"/>

    </FrameLayout>

    <Button
            android:id="@+id/missionButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:layout_alignBottom="@id/missionImage"
            android:layout_toRightOf="@id/missionImage"
            android:drawableLeft="@drawable/mission"
            android:drawableRight="@drawable/plus"
            android:text="@string/select_mission"
            android:background="@drawable/grey_button_bg"
            android:onClick="onSelectMissionClick"
            android:layout_below="@id/infoFragmentLayout"
            android:clickable="true"
            android:paddingRight="15dp"
            android:paddingLeft="5dp"
            android:gravity="left|center_vertical"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"/>

    <!-- Mission Chooser -->
    <!--
        <ImageView
                android:id="@+id/missionImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:layout_below="@id/owImage"
                android:layout_alignLeft="@id/owText"
                android:onClick="onSelectMissionClick"
                android:src="@drawable/mission" />
    -->



    <!-- End Mission Chooser -->

    <RelativeLayout
            android:id="@+id/toggleContainer"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/missionButton"
            android:background="@drawable/grey_button_bg"
            android:visibility="visible">

        <ImageView
                android:id="@+id/owImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_ab_icon" />

        <TextView
                android:id="@+id/owText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-light"
                android:layout_alignBottom="@id/owImage"
                android:text="@string/public_on_ow"
                android:textSize="18sp"
                android:layout_toRightOf="@id/owImage"/>

        <ToggleButton
                android:id="@+id/owSwitch"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:thumbTextPadding="5dp"
                android:switchTextAppearance="@style/Theme.openwatch.SwitchTextAppearance"
                android:thumb="@drawable/ow_toggle_bg"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                android:layout_alignBaseline="@id/owText"
                android:layout_marginRight="12dp"
                android:layout_alignBottom="@id/owImage"
                android:layout_alignParentRight="true"
                tools:ignore="NewApi"/>

        <View
                android:id="@+id/owDivider"
                android:layout_below="@id/owText"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="#ffd3cbc9"
                android:layout_height="1dp"/>

        <ImageView
                android:id="@+id/fbImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="12dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/owDivider"
                android:visibility="visible"
                android:src="@drawable/fb" />

        <TextView
                android:id="@+id/fbText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-light"
                android:layout_alignBottom="@id/fbImage"
                android:text="@string/post_to_fb"
                android:textSize="18sp"
                android:layout_toRightOf="@id/fbImage"/>



        <ToggleButton
                android:id="@+id/fbSwitch"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:switchTextAppearance="@style/Theme.openwatch.SwitchTextAppearance"
                android:thumbTextPadding="5dp"
                android:thumb="@drawable/ow_toggle_bg"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                android:layout_marginRight="12dp"
                android:layout_alignBaseline="@id/fbText"
                android:layout_alignParentRight="true"
                tools:ignore="NewApi"/>

        <View
                android:id="@+id/socialDivider"
                android:layout_below="@id/fbImage"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:background="#ffd3cbc9"
                android:layout_height="1dp"/>

        <ImageView
                android:id="@+id/twitterImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="12dp"
                android:layout_below="@id/socialDivider"
                android:layout_alignParentLeft="true"
                android:visibility="visible"
                android:src="@drawable/twitter" />

        <TextView
                android:id="@+id/twitterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/twitterImage"
                android:layout_alignBottom="@id/twitterImage"
                android:text="@string/post_to_twitter"
                android:textSize="18sp"/>


        <ToggleButton
                android:id="@+id/twitterSwitch"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:switchTextAppearance="@style/Theme.openwatch.SwitchTextAppearance"
                android:thumbTextPadding="0dp"
                android:layout_marginTop="10dp"
                android:thumb="@drawable/ow_toggle_bg"
                android:textOn="@string/yes"
                android:textOff="@string/no"
                android:layout_below="@id/socialDivider"
                tools:ignore="NewApi"
                android:layout_alignLeft="@+id/fbSwitch"/>
    </RelativeLayout>

    <Button
            android:id="@+id/doneButton"
            android:background="@drawable/green_button_bg"
            android:layout_below="@id/toggleContainer"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignLeft="@id/toggleContainer"
            android:layout_alignRight="@id/toggleContainer"
            android:fontFamily="sans-serif-light"
            android:layout_centerHorizontal="true"
            android:onClick="onDoneButtonClick"
            android:textColor="#fff"
            android:shadowColor="#264826"
            android:shadowDy="-2"
            android:shadowRadius=".1"
            android:text="@string/done"
            android:textSize="25sp"
            />

    <!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/coffee_ring" />
        -->

</RelativeLayout>